worked on report

--- a/beta/chapter1.tex
+++ b/beta/chapter1.tex
@@ -74,13 +74,16 @@ resources in a collection\footnote{URI - \url{http://www.w3.org/TR/uri-
 clarification/}}, for example an hypertext transfer protocol url specifies a
 webpage on the internet.
 
-\subsection*{XML} Extensible Markup Language (XML) defines a set of rules for
+\subsection*{XML} eXtensible Markup Language (XML) defines a set of rules for
 encoding documents in a format that is readable for both humans and
 machines\footnote{XML - \url{http://en.wikipedia.org/wiki/XML}}.
 
-\subsection*{HTML} Hypertext Markup Language (HTML) is the main language for
+\subsection*{HTML} HyperText Markup Language (HTML) is the main language for
 displaying web pages and other information that can be displayed in a web
 browser\footnote{HTML - \url{http://en.wikipedia.org/wiki/Html}}.
+
+\subsection*{XHTML}
+eXtensible HyperText Markup Language (XHTML) is HTML written as XML. Documents written in XHTML needs to be well formed, elements must be properly nested and they always have to be closed. Because of this, XHTML can be parsed using standard XML parsers, unlike HTML, which requires a lenient HTML-specific parser. XHTML files are saved with the extension .xht.
 
 \subsection*{RDF} Resource Description Framwork (RDF) is a general method to
 describe or model information that is implemented in web
