--- a/beta/chapter2.tex
+++ b/beta/chapter2.tex
@@ -45,7 +45,7 @@ Let's take a look at an example\footnote{Full example can be viewed at \url{http
 \newline
 The two lines at the top, \textbf{xmlns:rdf} and \textbf{xmlns:cd} define from which namespace elements with the rdf and cd prefix are from. The \textbf{rdf:Description} element contains the description of the resource identified by the \textbf{rdf:about} attribute. Finally the elements \textbf{cd:artist, cd:country, cd:company} etc. are properties of the resource.
 
-\section{Linked Data}
+\section{Linked Data - Connect data across the Web}
 The Semantic Web isn't just about putting data on the web. It is about creating connections through links, so that when you have some of it, you can find other, related, data.\\\\
 The term Linked data describes a method of publishing structured data so that it can be interlinked and become more useful. This is done by following a data model which is based on resources and that describe their properties, including relationships to other resources. By using standardized names for resources and property types, data sets from many different providers integrated. By expressing the relationships between resources in different data sets, a user may discover additional relevant data.\\
 The foundation of linked data are the technologies HTTP and URIs. Today we use them (and many other services) to present human readers with web pages, linked data extends this to share information in a way that can be read, connected and queried automatically by computers. This is as a concept is not new, and have been used in other similar situations such as database network models and headings in library catalogs.\\\\
@@ -56,7 +56,7 @@ Tim Berners-Lee,\footnote{TODO: add src on Tim} the father of the World Wide Web
 \item{Provide useful information about the thing when its URI is dereferenced, using standard formats such as RDF/XML.}
 \item{Include links to other, related URIs in the exposed data to improve discovery of other related information on the Web.}
 \end{enumerate}
-A community project called \textit{Linking Open Data\footnote{WC3 Semantic Web Education and Outreach group's - Linking Open Data community project}}, organized by W3C aims to extend the Web by publishing various open datasets as RDF on the Web, and by creating RDF links between data items from different data sources. In October 2007, the datasets consisted of over two billion\footnote{TODO: Add src} RDF triples, which were interlinked by over two million RDF links. By September 2011 this had grown to 31 billion RDF triples, interlinked by around 504 million RDF links.\\\\
+A community project called \textit{Linking Open Data\footnote{WC3 Semantic Web Education and Outreach group's - Linking Open Data community project}}, organized by W3C aims to extend the Web by publishing various open datasets as RDF on the Web by creating RDF links between data items from different data sources. In October 2007, the datasets consisted of over two billion\footnote{TODO: Add src} RDF triples, which were interlinked by over two million RDF links. By September 2011 this had grown to 31 billion RDF triples, interlinked by around 504 million RDF links.\\\\
 The image below shows datasets that have been published in Linked Data format, by contributors to the Linking Open Data community project and other individuals and organizations. The purpose of this image is merely to depict the extent of such a project, not to present the details of the data sets.\footnote{See \url{http://lod-cloud.net/} for a more detailed image with links to all the contributors.}
 \begin{center}
 \includegraphics[scale=0.6]{../imgs/lod-datasets.png}
