--- a/beta/chapter3.tex
+++ b/beta/chapter3.tex
@@ -19,7 +19,7 @@ The main differences between the old system and the prototype are:
 \begin{itemize}
 \item Language, the prototype is written in Python\footnote{TODO, something about python} which is a object oriented\footnote{something about OO} languge that is well suited for tasks like this one. It is easy to divide the code into separate modules that handle different tasks. Furthermore it is convinient to work with (apply transformations etc.) objects such as whole documents, paragraphs. 
 \item Follows standards proposed by Rättsinformationsprojektet for legal documents.   
-\item RDF, TODO: Marked up with URI's to.. 
+\item The generated files will be marked up with RDF to contribute to a more semantic web. 
 \end{itemize} 
 
 \subsection{Delimitations}
