--- a/beta/chapter4.tex
+++ b/beta/chapter4.tex
@@ -99,6 +99,9 @@ SimpleParse allows you to generate parsers directly from EBNF\footnote{Extended 
 
 RDFLib is a library for working with rdf that contains an RDF/XML parser and serializer. It also contains graph data structures to represent data. In my case it was for example used to read and represent data from  an external file with URIs to all the SFS laws.   
 
+\subsection{Genshi}
+Genshi is a library that provides components for parsing, generating, and processing HTML, XML or other textual content for output generation on the web. The main feature that is used in this project is a template language. It is used to convert the parsed and marked up files to XHTML files. A nice feature is that template instances are cached to avoid having to parse the same template file more than once.
+
 \section{Version control}
 
 GitHub\footnote{GitHub is a web-based hosting service for software development
