--- a/beta/chapter6.tex
+++ b/beta/chapter6.tex
@@ -8,6 +8,7 @@ purus.
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
 purus. 
 
+\subsection{(Lack of) Use today}
 \section{Future development}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Mauris
